Add function to insert tl;dr section into page

--- a/forge/atlasbot/env.template
+++ b/forge/atlasbot/env.template
@@ -6,3 +6,5 @@ SLACK_CLIENT_SECRET=alphanum
 ATLASBOT_WEBHOOK_PATH=/0_0_1/atlas-webhook
 FORGE_ENVIRONMENT=development
 SITE=example.atlassian.net
+FORGE_EMAIL=my.email@example.com
+FORGE_API_TOKEN="my token here"
