--- a/lambda-src/tsconfig.json
+++ b/lambda-src/tsconfig.json
@@ -14,6 +14,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true, 
     "isolatedModules": true, 
+    "allowJs": true
   },
   "exclude": ["node_modules"]
 }
